@@ -11,6 +11,7 @@
 * Adding dual pass option for ffmpeg options (thanks to Catatau)
 * Adding #163 elapsed time in encoding panel (thanks to Benedicte Emilie Brækken)
 * Adding super secret DEVMODE environment variable
+* Adding #168 Allow decimal CRF values as Custom values (thanks to Etz)
 * Changing all builds to use Python 3.8, removing idea of "legacy" windows until later time
 * Fixing #156 Copy was broken due to ffmpeg extras not being passed (thanks to leonardyan)
 * Fixing #158 Translation and icon of tab name "Quality" lost when output codec switched (thanks to leonardyan)
